feat: add dummy data for demo